# PyroclastMPM

./: .clang_format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.dev.md  README.md  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  Dockerfile_gpu  devcontainer.json  docker-compose.yml
.trunk/: trunk.yaml
app/: CMakeLists.txt  pyroclastmpm_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst
docs/: cpp_api.rst
python/pybind/: CMakeLists.txt  _pyroclastmpm.cpp  boundaryconditions_bind.cpp  global_settings_bind.cpp  materials_bind.cpp  nodes_bind.cpp  solver_bind.cpp  tools_bind.cpp
python/pybind/boundaryconditions/: bodyforce_bind.cpp  boundaryconditions_bind.cpp  gravity_bind.cpp  nodedomain_bind.cpp  planardomain_bind.cpp  rigidbodylevelset_bind.cpp
python/pybind/common/: global_settings_bind.cpp  tools_bind.cpp
python/pybind/materials/: dp_rheo.cpp  druckerprager_cap_bind.cpp  linearelastic_bind.cpp  localrheology_bind.cpp  materials_bind.cpp  modified_camclay_bind.cpp  modified_camclay_mu_i_bind.cpp  modified_camclay_nl_bind.cpp  mohr_coulomb_bind.cpp  mu_i_bind.cpp  newtonfluid_bind.cpp  vonmises_bind.cpp
python/pybind/nodes/: nodes_bind.cpp
python/pybind/particles/: particles_bind.cpp
python/pybind/solver/: solver_bind.cpp  usl_bind.cpp
python/pyroclastmpm/: CMakeLists.txt  GeometryGenerators.py  __init__.py  _pyroclastmpm.cpp  boundaryconditions.py  boundaryconditions_bind.cpp  boundaryconditions_bind.cu  global_settings.py  global_settings_bind.cpp  global_settings_bind.cu  helper.py  materials.py  materials_bind.cpp  materials_bind.cu  nodes.py  nodes_bind.cpp  nodes_bind.cu  particles.py  particles_bind.cpp  particles_bind.cu  plotting.py  solver.py  solver_bind.cpp  solver_bind.cu  spatialpartition_bind.cpp  spatialpartition_bind.cu  tools.py  tools_bind.cpp  tools_bind.cu
python/pyroclastmpm/pybind/: CMakeLists.txt  _pyroclastmpm.cpp  boundaryconditions_bind.cpp  global_settings_bind.cpp  materials_bind.cpp  nodes_bind.cpp  particles_bind.cpp  solver_bind.cpp  tools_bind.cpp
scripts/: coverage.sh  coverage_sonar.sh
src/: CMakeLists.txt
src/boundaryconditions/: bodyforce.cpp  bodyforce.cu  bodyforce_inline.cuh  bodyforce_inline.h  gravity.cpp  gravity.cu  gravity_inline.cuh  gravity_inline.h  nodedomain.cpp  nodedomain.cu  nodedomain_inline.cuh  nodedomain_inline.h  planardomain.cpp  planardomain.cu  planardomain_inline.cuh  planardomain_inline.h  rigidbodylevelset copy.cpp  rigidbodylevelset.cpp  rigidbodylevelset.cu  rigidbodylevelset_inline.cuh  rigidbodylevelset_inline.h
src/boundaryconditions/bodyforce/: bodyforce.cu  bodyforce_kernels.cu
src/boundaryconditions/gravity/: gravity.cu  gravity_kernels.cu
src/boundaryconditions/nodedomain/: nodedomain.cu  nodedomain_kernels.cu
src/boundaryconditions/planardomain/: planardomain.cu  planardomain_kernels.cu
src/boundaryconditions/rigidparticles/: rigidparticles.cu  rigidparticles_kernels.cu
src/common/: global_settings.cpp  global_settings.cu  helper.cpp  helper.cu  output.cpp  output.cu  tools.cpp  tools.cu
src/materials/: dp_rheo.cpp  dp_rheo_inline.h  druckerprager_cap.cpp  druckerprager_cap_inline.h  linearelastic.cpp  linearelastic.cu  linearelastic_inline.cuh  linearelastic_inline.h  localrheo.cpp  localrheo.cu  localrheo_inline.cuh  localrheo_inline.h  mcc_mu_i.cpp  mcc_mu_i_inline.h  modifiedcamclay.cpp  modifiedcamclay_inline.h  modifiedcamclay_inline_2.h  modifiedcamclay_inline_mod.h  modifiedcamclay_nl.cpp  modifiedcamclay_nl_inline.h  mohrcoulomb.cpp  mohrcoulomb_inline.h  muijop.cpp  muijop_inline.h  newtonfluid.cpp  newtonfluid.cu  newtonfluid_inline.cuh  newtonfluid_inline.h  vonmises.cpp  vonmises.cu  vonmises_inline.cuh  vonmises_inline.h
src/materials/druckerprager/: druckerpragermat.cu  druckerpragermat_kernels.cu
src/materials/elastoplastic/: elastoplasticmat.cu  elastoplasticmat_kernels.cu
src/materials/linearelastic/: linearelastic.cu  linearelasticmat.cu  linearelasticmat_kernels.cu
src/materials/localrheo/: localrheomat.cu  localrheomat_kernels.cu
src/materials/newtonfluid/: newtonfluidmat.cu  newtonfluidmat_kernels.cu
src/materials/nonlocalngf/: nonlocalngfmat.cu  nonlocalngfmat_kernels.cu
src/nodes/: nodes.cpp  nodes.cu  nodes_inline.cuh  nodes_inline.h  nodes_kernels.cu
src/particles/: particles.cpp  particles.cu  particles_kernels.cu
src/shapefunction/: cubic.cuh  linear.cuh  quadratic.cuh  shapefunction.cpp  shapefunction.cu
src/shapefunctions/: cubic.cuh  linear.cuh  shapefunction_kernels.cu
src/solver/: solver.cpp  solver.cu
src/solver/apic/: apic.cu  apic_kernels.cu
src/solver/musl/: musl.cu  musl_kernels.cu
src/solver/tlmpm/: tlmpm.cu  tlmpm_kernels.cu
src/solver/usl/: usl.cpp  usl.cu  usl_inline.cuh  usl_inline.h  usl_kernels.cu
src/spatialpartition/: spatialpartition.cpp  spatialpartition.cu  spatialpartition_inline.cuh  spatialpartition_inline.h  spatialpartition_kernels.cu
tests/: CMakeLists.txt  test_main.cpp  test_main.cu
tests/constitutive_analysis/: test_basecontrol.py
tests/examples/two_disc_impact/: test_two_disks.py
tests/examples/vibrating_bar/: test_vibrating_bar.py
tests/python_interface/: test_boundaryconditions.py  test_materials.py  test_nodes.py  test_particles.py  test_solvers.py
tests/unit/: test_bodyforce.cuh  test_bodyforce.h  test_druckerprager.cuh  test_druckerprager.h  test_global.cuh  test_global.h  test_gravity.cuh  test_gravity.h  test_linearelastic.cuh  test_linearelastic.h  test_localrheo.cuh  test_localrheo.h  test_musl.cuh  test_musl.h  test_newtonfluid.cuh  test_newtonfluid.h  test_nodedomain.cuh  test_nodedomain.h  test_nodes.cuh  test_nodes.h  test_nonlocalngf.cuh  test_nonlocalngf.h  test_particles.cuh  test_particles.h  test_planardomain.cuh  test_planardomain.h  test_rigidbodylevelset.cuh  test_rigidbodylevelset.h  test_rigidparticles.cuh  test_shapefunctions.cuh  test_shapefunctions.h  test_solver.cuh  test_solver.h  test_spatialpartition.cuh  test_spatialpartition.h  test_tlmpm.cuh  test_tlmpm.h  test_usl.cuh  test_usl.h
(+345 files in other folders)
