[tool.poetry]
name = "pyroclastmpm"
version = "0.2.0"
description = "Material Point Method solver"
authors = ["Lubbe, Retief (UT-ET) <r.lubbe@utwente.nl>"]
readme = "README.md"
packages = [
    { include = "pyroclastmpm", from = "./python" },

]
include = ["./python/pyroclastmpm/*.so"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.4"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
autopep8 = "^2.0.1"
scienceplots = "^2.0.1"


[tool.poetry.group.plot.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.6.1"
pandas = "^1.5.0"
pyvista = "^0.39.0"
imageio = {extras = ["ffmpeg"], version = "^2.28.1"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
