[tool.poetry]
name = "pyroclastmpm"
version = "0.3.0"
description = "Material Point Method solver"
authors = ["Lubbe, Retief (UT-ET) <r.lubbe@utwente.nl>"]
readme = "README.md"
packages = [
    { include = "pyroclastmpm", from = "./python" }
]
include = [{path = "./python/pyroclastmpm/*.so", format = "wheel"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
autopep8 = "^2.0.1"
black = "^23.3.0"
isort = "^5.12.0"
breathe = "^4.35.0"
sphinx-autodoc-typehints = "^1.23.2"
furo = "^2023.5.20"
pydata-sphinx-theme = "^0.13.3"
sphinx-copybutton = "^0.5.2"
gcovr = "^6.0"


[tool.black]
line-length = 79 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"